--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -1,14 +1,10 @@
-.link {
-  color: white;
-  text-decoration: none;
+.cards {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.nav {
-  box-shadow: none !important;
-  height: 60px;
-}
-
-.skewing:after {
+/* .card-skew:after {
   box-shadow: 5vw 0 0 #9c27b0, -5vw 0 0 #9c27b0;
   transform-origin: 100% 100%;
   background: #9c27b0;
@@ -18,7 +14,7 @@
   transform: rotate(-0.95deg);
   pointer-events: none;
   height: 70px;
-  position: fixed;
+  position: relative;
   width: 100vw;
   content: ' ';
   z-index: 1;
@@ -27,4 +23,4 @@
   top: 0%;
   box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
     0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-}
+} */
