--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -1,26 +1,136 @@
+/* #58c3db */
+.cards-div h5 {
+  text-align: center;
+  color: #9c27b0;
+  font-size: 30px;
+}
 .cards {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  width: 90%;
+  margin: 40px auto auto auto;
+  /* border: 2px solid black; */
+  overflow: auto;
+  white-space: nowrap;
+}
+.main-cards {
+  text-align: left;
+  cursor: pointer;
+  display: inline-block;
+  height: 120%;
+  width: 24%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+@media (max-width: 770px) {
+  .main-cards {
+    width: 250px;
+  }
+}
+.a {
+  color: #9c27b0;
+  text-decoration: none;
+  background-color: transparent;
+}
+.img {
+  max-width: 100%;
+  height: auto;
+  margin-top: -9px;
+  margin-bottom: 26px;
+  -webkit-clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  filter: grayscale(100%);
+  vertical-align: middle;
+  z-index: 1;
+}
+.img:hover {
+  filter: none;
 }
 
-/* .card-skew:after {
-  box-shadow: 5vw 0 0 #9c27b0, -5vw 0 0 #9c27b0;
-  transform-origin: 100% 100%;
-  background: #9c27b0;
-  -webkit-transform: rotate(-0.65deg);
-  -ms-transform: rotate(-0.65deg);
-  -o-transform: rotate(-0.65deg);
-  transform: rotate(-0.95deg);
-  pointer-events: none;
-  height: 70px;
+.cards-image {
   position: relative;
-  width: 100vw;
-  content: ' ';
+  display: block;
+  padding: 4px;
+  margin-bottom: 20px;
+  line-height: 1.42857;
+  background-color: #9c27b0;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: border 0.2s ease-in-out;
+  -o-transition: border 0.2s ease-in-out;
+  transition: border 0.2s ease-in-out;
+  -webkit-clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+}
+
+.cards-image:before {
+  top: 0;
+  transform: skewY(2deg);
+  transform-origin: 100% 0;
+
+  background: inherit;
+  content: '';
+  display: block;
+  height: 8%;
+  left: 0;
+  position: absolute;
+  right: 0;
   z-index: 1;
+}
+.cards-image:after {
   bottom: 0;
-  left: 0%;
-  top: 0%;
-  box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
-    0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
-} */
+  transform: skewY(-2deg);
+  transform-origin: 100%;
+
+  background: inherit;
+  content: '';
+  display: block;
+  height: 29%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
+
+.card-content {
+  margin-top: -10px;
+}
+.card-p {
+  font-size: 17px;
+}
+.card-h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 18px;
+  height: 36px;
+  font-size: 16px;
+  font-weight: normal;
+  color: #25bcbc;
+  margin-top: 12px !important;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.card-p2 {
+  color: #25bcbc;
+  font-weight: bolder;
+}
+.card-p3 {
+  overflow: hidden;
+  display: block;
+  text-overflow: ellipsis;
+  line-height: 16px;
+  height: 48px;
+  font-size: 14px;
+  font-weight: normal;
+  color: black;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.showmore-button {
+  width: 90%;
+  display: flex;
+  justify-content: flex-end;
+  margin: auto;
+}
