--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -43,7 +43,7 @@
   vertical-align: middle;
   z-index: 1;
 }
-.img:hover {
+.main-cards:hover .img {
   filter: none;
 }
 
@@ -107,7 +107,6 @@
   font-weight: normal;
   color: #25bcbc;
   margin-top: 12px !important;
-  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
@@ -124,7 +123,6 @@
   font-size: 14px;
   font-weight: normal;
   color: black;
-  display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
