--- a/src/pages/contactus/Contactus.css
+++ b/src/pages/contactus/Contactus.css
@@ -5,10 +5,11 @@
 .text {
   text-align: center;
 }
-.text h1 {
+.text h2 {
   font-size: 50px;
   margin: 0;
   padding: 0;
+  color: #9c27b0;
 }
 .bodyform {
   display: flex;
@@ -21,6 +22,10 @@
     margin: 40px;
   }
 }
+.contact-h1 {
+  color: #9c27b0;
+}
+
 .input1,
 .textarea1,
 .button1 {
@@ -55,7 +60,7 @@
 .button1 {
   width: 510px;
   color: white;
-  background: black;
+  background: #9c27b0;
   outline: none;
   border: none;
 }
