--- a/src/components/albums/Album.css
+++ b/src/components/albums/Album.css
@@ -1,9 +1,43 @@
 .album {
   margin: 130px auto;
   width: 100%;
+  background-color: #20364b;
   /* border: 3px solid red; */
+}
+/* .album:after {
+  box-shadow: 5vw 0 0 #fff, -5vw 0 0 #fff;
+  -webkit-transform: rotate(-1.5deg);
+  -ms-transform: rotate(-1.5deg);
+  -o-transform: rotate(-1.5deg);
+  transform: rotate(-1.5deg);
+  transform-origin: 100% 100%;
+  top: -45px;
+  background-color: #fff;
+  height: 45px;
+  pointer-events: none;
+  position: absolute;
+  width: 100vw;
+  content: ' ';
+  z-index: 2;
+  right: 0;
+
+  background-color: #1f3448;
+  box-shadow: none;
+  transform: rotate(1deg);
+  width: calc(100% + 3px);
+  top: -18px;
+  left: -2px;
+  height: 80px;
+} */
+.album-div {
+  /* border: 3px solid red; */
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .album h2 {
   text-align: center;
   font-size: x-large;
+  color: white;
 }
