--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -1,7 +1,7 @@
 /* #58c3db */
 .cards-div h5 {
   text-align: center;
-  color: #9c27b0;
+  color: #25bcbc;
   font-size: 30px;
 }
 .cards {
@@ -21,6 +21,7 @@
   width: 24%;
   padding-left: 5px;
   padding-right: 5px;
+  border: none;
 }
 @media (max-width: 770px) {
   .main-cards {
@@ -28,7 +29,7 @@
   }
 }
 .a {
-  color: #9c27b0;
+  color: #25bcbc;
   text-decoration: none;
   background-color: transparent;
 }
@@ -48,12 +49,13 @@
 }
 
 .cards-image {
+  border: none !important;
   position: relative;
   display: block;
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857;
-  background-color: #9c27b0;
+  background-color: #25bcbc;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
@@ -131,4 +133,7 @@
   display: flex;
   justify-content: flex-end;
   margin: auto;
+}
+.button1 {
+  background-color: #25bcbc !important;
 }
