--- a/src/components/albums/Album.css
+++ b/src/components/albums/Album.css
@@ -1,10 +1,11 @@
 .album {
-  margin: 130px auto;
+  position: relative;
+  margin: 80px auto auto auto;
   width: 100%;
   background-color: #20364b;
   /* border: 3px solid red; */
 }
-/* .album:after {
+.album:after {
   box-shadow: 5vw 0 0 #fff, -5vw 0 0 #fff;
   -webkit-transform: rotate(-1.5deg);
   -ms-transform: rotate(-1.5deg);
@@ -21,20 +22,18 @@
   z-index: 2;
   right: 0;
 
-  background-color: #1f3448;
+  background-color: #20364b;
   box-shadow: none;
   transform: rotate(1deg);
   width: calc(100% + 3px);
-  top: -18px;
+  top: -98px;
   left: -2px;
-  height: 80px;
-} */
+  height: 150px;
+}
 .album-div {
   /* border: 3px solid red; */
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-top: 40px;
+  padding-bottom: 80px;
 }
 .album h2 {
   text-align: center;
