--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -96,6 +96,7 @@
 
 .card-content {
   margin-top: -10px;
+  position: relative;
 }
 .card-p {
   font-size: 17px;
@@ -105,13 +106,14 @@
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: 18px;
-  height: 36px;
+  height: 26px;
   font-size: 16px;
   font-weight: normal;
   color: #25bcbc;
-  margin-top: 12px !important;
+  margin-top: 10px !important;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  position: relative;
 }
 .card-p2 {
   color: #25bcbc;
