--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  margin: 20px 0;
+  background-color: white;
 }
 .footer-div {
   width: 90%;
@@ -39,4 +39,5 @@
   /* border: 3px solid red; */
   text-align: center;
   font-size: 12px;
+  color: black;
 }
