--- a/src/pages/contactus/Contactus.css
+++ b/src/pages/contactus/Contactus.css
@@ -1,5 +1,8 @@
 .contact-div {
   overflow: hidden;
+  background-color: #20364b;
+  color: white;
+  position: relative;
 }
 
 .text {
@@ -9,7 +12,7 @@
   font-size: 50px;
   margin: 0;
   padding: 0;
-  color: #20364b;
+  color: white;
 }
 .bodyform {
   display: flex;
@@ -97,3 +100,7 @@
   width: 30px;
   cursor: pointer;
 }
+/* .contact-footer{
+  position: absolute;
+  bottom: 0;
+} */
