--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -16,8 +16,14 @@
   /* border: 3px solid yellow; */
 }
 .about-img-div img {
-  width: 100%;
-  height: 500px;
+  max-width: 100%;
+  height: auto;
+  margin-top: -9px;
+  margin-bottom: 26px;
+  -webkit-clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  vertical-align: middle;
+  z-index: 1;
 }
 .about-img-div {
   /* border: 3px solid red; */
