--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -5,10 +5,29 @@
   overflow: hidden;
 }
 .blog-div {
-  width: 90%;
+  width: 70%;
   margin: 20px auto;
-  border: 3px solid red;
+  /* border: 3px solid red; */
+}
+@media (max-width: 500px) {
+  .blog-div {
+    width: 90%;
+  }
 }
 .blog-card {
   width: 100%;
+  background-color: #20364b !important;
+}
+.blog-imagelist {
+  width: 100%;
+  /* border: 3px solid green; */
+}
+.blog-images {
+  /* border: 3px solid blue; */
+  width: 100%;
+  height: 150px;
+}
+.blog-date {
+  color: white;
+  font-size: small;
 }
