--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -16,6 +16,7 @@
 }
 .blog-card {
   width: 100%;
+  border: none;
   background-color: #20364b !important;
 }
 .blog-imagelist {
@@ -24,10 +25,21 @@
 }
 .blog-images {
   /* border: 3px solid blue; */
-  width: 100%;
-  height: 150px;
+  max-width: 100%;
+  height: auto;
+
+  margin-bottom: 26px;
+  -webkit-clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
+  vertical-align: middle;
 }
 .blog-date {
   color: white;
   font-size: small;
+}
+.heart-white {
+  color: white;
+}
+.heart-red {
+  color: red;
 }
