--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -9,7 +9,7 @@
   margin: 20px auto;
   /* border: 3px solid red; */
 }
-@media (max-width: 500px) {
+@media (max-width: 700px) {
   .blog-div {
     width: 95%;
   }
@@ -20,18 +20,25 @@
   background-color: #20364b !important;
 }
 .blog-imagelist {
-  width: 100%;
+  width: 97%;
+  margin: auto;
   /* border: 3px solid green; */
 }
-.blog-images {
-  /* border: 3px solid blue; */
+@media (max-width: 500px) {
+  .blog-imagelist {
+    width: 92%;
+    height: 180px;
+  }
+}
+/* .blog-images {
+  border: 3px solid blue;
   max-width: 100%;
   height: auto;
   margin-bottom: 26px;
   -webkit-clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
   clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
   vertical-align: middle;
-}
+} */
 .blog-date {
   color: white;
   font-size: small;
