User image added on top

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -46,3 +46,11 @@
     display: block !important;
   }
 }
+.user-nav {
+  display: flex;
+}
+.user-image {
+  width: 30px;
+  height: 27px;
+  border-radius: 50%;
+}
