--- a/src/pages/showmore/Showmore.css
+++ b/src/pages/showmore/Showmore.css
@@ -12,6 +12,11 @@
   justify-content: center;
   flex-wrap: wrap;
 }
+@media (max-width: 700px) {
+  .showmore-div {
+    width: 95%;
+  }
+}
 .main-showmore {
   text-align: left;
   cursor: pointer;
