--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -70,3 +70,11 @@
   height: 40px;
   border: 3px solid red;
 }
+.loader {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.main-loader {
+  width: 700px;
+}
