--- a/src/components/albums/Album.css
+++ b/src/components/albums/Album.css
@@ -35,8 +35,16 @@
   padding-top: 40px;
   padding-bottom: 80px;
 }
-.album h2 {
+.home-h2 h2 {
   text-align: center;
   font-size: x-large;
   color: white;
+}
+@media (max-width: 700px) {
+  .home-h2 h2 {
+    font-size: larger;
+  }
+}
+.home-h2 {
+  padding: 0 10px;
 }
