--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -55,3 +55,13 @@
   height: 27px;
   border-radius: 50%;
 }
+.b {
+  color: black;
+  text-decoration: none;
+  background-color: transparent;
+  outline: none;
+}
+.nav-icon {
+  width: 50px !important;
+  margin: auto;
+}
