--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -65,3 +65,18 @@
   width: 50px !important;
   margin: auto;
 }
+.nav-icons {
+  font-size: 25px;
+}
+.nav-icons i {
+  color: #25bcbc;
+  font-size: 35px;
+  margin: 0 5px;
+}
+.nav-footer {
+  position: absolute;
+  top: 240%;
+}
+.drawer-box {
+  position: relative;
+}
