--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -75,8 +75,15 @@
 }
 .nav-footer {
   position: absolute;
-  top: 240%;
+  top: 180%;
 }
 .drawer-box {
   position: relative;
+}
+.drawer-h3 {
+  color: #20364b;
+  text-align: center;
+}
+.drawer-smallicons {
+  color: #25bcbc;
 }
