--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -10,6 +10,7 @@
   /* border: 3px solid red; */
 }
 .blog-images {
+  width: 100%;
   height: 200px !important;
   overflow: hidden;
 }
@@ -114,4 +115,22 @@
 }
 .posting-img {
   width: 100%;
+}
+.ii {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+input[type='file'] {
+  display: none;
+}
+.input-file {
+  font-family: calibri;
+  width: 150px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px dashed #bbb;
+  text-align: center;
+  background-color: #ddd;
+  cursor: pointer;
 }
