--- a/src/pages/userprofile/UserProfile.css
+++ b/src/pages/userprofile/UserProfile.css
@@ -9,6 +9,11 @@
   width: 80%;
   /* border: 3px solid orange; */
 }
+@media (max-width: 700px) {
+  .user-profile-div {
+    width: 97%;
+  }
+}
 .user-div {
   /* border: 3px solid red; */
   display: flex;
