--- a/src/pages/userprofile/UserProfile.css
+++ b/src/pages/userprofile/UserProfile.css
@@ -20,6 +20,11 @@
   .user-image-div {
     width: 95%;
   }
+  .user-div {
+    width: 90%;
+    margin: auto;
+    justify-content: center;
+  }
 }
 .user-div {
   /* border: 3px solid red; */
@@ -29,14 +34,14 @@
 }
 .user-image-div {
   /* border: 3px solid green; */
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
 }
 .user-profile-image {
   /* border: 3px solid gold; */
   border-radius: 50%;
   max-width: 100%;
-  height: 200px;
+  height: 150px;
 }
 .user-names {
   /* border: 3px solid blue; */
@@ -68,4 +73,8 @@
 }
 .edit-inputs {
   margin: 10px 0 !important;
+}
+.bottom-btns {
+  display: flex;
+  justify-content: flex-end;
 }
