--- a/src/pages/userprofile/UserProfile.css
+++ b/src/pages/userprofile/UserProfile.css
@@ -33,9 +33,10 @@
   position: relative;
 }
 .user-image-div {
-  /* border: 3px solid green; */
-  width: 150px;
-  height: 150px;
+  border: 3px solid green;
+  width: 180px;
+  height: 180px;
+  position: relative;
 }
 .user-profile-image {
   /* border: 3px solid gold; */
