--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -4,6 +4,9 @@
   color: #25bcbc;
   font-size: 30px;
 }
+.cards::-webkit-scrollbar {
+  display: none;
+}
 .cards {
   display: flex;
   width: 90%;
@@ -16,15 +19,15 @@
   text-align: left;
   cursor: pointer;
   display: inline-block;
-  height: 100%;
-  width: 300px;
   padding-left: 5px;
   padding-right: 5px;
   border: none;
+  /* border: 3px solid red; */
 }
 @media (max-width: 770px) {
   .main-cards {
     width: 250px;
+    /* filter: none !important; */
   }
   .img {
     width: 250px !important;
@@ -36,9 +39,17 @@
   background-color: transparent;
   outline: none;
 }
+
+.cards-image-subdiv {
+  width: 250px;
+  height: 180px;
+  overflow: hidden;
+}
+
 .img {
-  width: 100%;
-  max-height: 220px;
+  max-width: 100%;
+  height: auto;
+  width: auto;
   margin-top: -9px;
   margin-bottom: 26px;
   -webkit-clip-path: polygon(0 0, 100% 6%, 100% 94%, 0 100%);
