--- a/src/pages/showmore/Showmore.css
+++ b/src/pages/showmore/Showmore.css
@@ -9,7 +9,7 @@
   width: 87%;
   margin: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 @media (max-width: 700px) {
@@ -34,8 +34,22 @@
   }
 }
 @media (max-width: 580px) {
-  .main-showmore {
-    width: 45%;
+  .showmore-div {
+    width: 85%;
+  }
+  .main-showmore,
+  .showmore-p3 {
+    width: 100% !important;
+  }
+  .showmore-image-subdiv {
+    width: 100%;
+    height: 180px;
+    overflow: hidden;
+  }
+  .img {
+    max-width: 100%;
+    width: 100%;
+    /* border: 3px solid red; */
   }
 }
 .a {
