--- a/src/pages/showmore/Showmore.css
+++ b/src/pages/showmore/Showmore.css
@@ -35,16 +35,17 @@
 }
 @media (max-width: 580px) {
   .showmore-div {
-    width: 85%;
+    width: 90%;
+    justify-content: center;
   }
-  .main-showmore,
-  .showmore-p3 {
-    width: 100% !important;
+  .main-showmore {
+    width: 80% !important;
   }
   .showmore-image-subdiv {
     width: 100%;
     height: 180px;
     overflow: hidden;
+    border: 3px solid green;
   }
   .img {
     max-width: 100%;
