--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -104,7 +104,7 @@
 }
 .posting-imgdiv {
   width: 25%;
-  border: 3px solid red;
+  /* border: 3px solid red; */
   position: relative;
 }
 .posting-imgdiv button {
