--- a/src/pages/showmore/Showmore.css
+++ b/src/pages/showmore/Showmore.css
@@ -27,6 +27,8 @@
   padding-left: 10px;
   padding-right: 10px;
   border: none;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 @media (max-width: 770px) {
   .main-showmore {
